--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,6 +45,10 @@ $navbar-default-font: #FFFFFF;
   border-top: 1px solid #eaeaea;
   padding-top: 10px;
 }
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
 .description {
   margin-top: 0px;
 }
