--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,6 +10,13 @@
       </div> 
       <div class="article-body">
       <%= truncate(a.description, length: 80)%>
+      <div class="article-meta-details">
+      <small>Created by: <%= a.user.username if a.user%>,
+                         <%= time_ago_in_words(a.created_at)%> ago,
+                         Last updated: <%= time_ago_in_words(a.updated_at) %> ago.
+
+      </small>
+      </div>
       </div>
       <div class="article-actions">
 
