--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,6 +62,10 @@ border-top: 1px solid #eaeaea;
 padding-top: 15px;
 padding-bottom: 15px;
 }
+.listing {
+  list-style: none;
+  padding-left: 0px;
+}
 .footer{
   margin-top: 50px;
   padding-top: 10px;
