--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,8 @@
 <h1 align="center">View the latest articles over here</h1>
-
+<div align="center">
+<%= will_paginate %>
+</div>
 <%= render 'article', object: @articles %>
+<div align="center">
+<%= will_paginate %>
+</div>
