--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,8 @@
 <h1 align="center">All content creators</h1>
 <div align="center">
+<%= will_paginate %>
+</div>
+<div align="center">
 <% @users.each do |u|%>
 
 <ul class="listing">
@@ -18,3 +21,6 @@
   <% end %>
 
   </div>
+  <div align="center">
+<%= will_paginate %>
+</div>
