--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,6 +16,7 @@
       </small>
       </div>
       </div>
+      <% if logged_in? && current_user == a.user %>
       <div class="article-actions">
 
            <%= link_to 'Edit this article', edit_article_path(a), class: "btn btn-xs btn-primary" %>
@@ -24,6 +25,7 @@
                                       class: "btn btn-xs btn-danger" %>
         
       </div>
+      <% end %>
     </div>
   </div>
 </div>
