--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -43,7 +43,7 @@
       <ul class="nav navbar-nav navbar-right">
       <% if logged_in? %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account |<%= "Admin" if current_user.admin? %><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Edit profile", edit_user_path(current_user)%></li>
             <li><%= link_to "View my profile", user_path(current_user)%></li>
