--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,9 @@
       <%= link_to u.username, user_path(u)%>
     </li>
       <li><small><%= pluralize(u.articles.count, "article") if u.articles%></small></li>
+      <% if logged_in? && current_user.admin? %>
+        <li><%= link_to "Delete User", user_path(u), method: :delete, data: {confirm: "Are you sure you want to delete the user and all their articles?"}%>
+      <% end %>
     </div>
   </div>
 </ul>
